Fix fuzzy/blurry text on tables
Issue is described here;
https://discuss.phplist.org/t/fuzzy-font-in-subscriber-table/4884/12

This change fixed the blurry text.

--- a/less/legacy.less
+++ b/less/legacy.less
@@ -117,12 +117,7 @@ table.well tr td{padding:10px 20px;padding-right:20px}
 .plugindetails .label{color:@black}
 .navbar-brand{padding-top:7px}
 .navbar-default{padding:10px}
-.alert{margin:10px 0} 
-.table-responsive, .table-responsive > .table{
-    transform:rotateX(180deg);
-    -ms-transform:rotateX(180deg); /* IE 9 */
-    -webkit-transform:rotateX(180deg); /* Safari and Chrome */
-}
+.alert{margin:10px 0}
 .panel > .well.table-responsive{    border: 1px solid #e3e3e3;}
 .panel{border-width:0 }
 .panel.panel-default{border-width:1px}
